--- a/Resources/CSS/galerie-statica.css
+++ b/Resources/CSS/galerie-statica.css
@@ -48,7 +48,8 @@
 }
 
 #grid-galerie figcaption:hover {
-
+  background-color: whitesmoke;
+  color: #89CFF0;
 }
 
 @media screen and (max-width:750px){
