--- a/views/fragments/footer.ejs
+++ b/views/fragments/footer.ejs
@@ -1,15 +1,19 @@
 <footer>
     <!-- 11 b) link inceput pag -->
     <a href="#" class="link_top"><div title="Back to Top" id="downbutton"><div id="arrow">&#129081;</div></div></a>
+    <p id="banner"><span id="message-cookies">Auto Wheels asks you to accept cookies for performance, social media and advertising purposes.<button id="ok_cookies">Yes, I Accept</button></span></p>
     <!-- 13 telefon/mail/locatie/wapp chat -->
     <address>
         <a href="tel:+0711990000">Phone</a>
         <a href="mailto:user000@gmail.com">Mail</a>
         <a href="https://www.google.com/maps/dir//Facultatea+de+Matematic%C4%83+%C8%99i+Informatic%C4%83,+Strada+Academiei+14,+Bucure%C8%99ti+010014/@44.4406657,26.0968301,13.79z/data=!4m17!1m7!3m6!1s0x40b1ff472f47f047:0x493984726f0235f9!2sFacultatea+de+Matematic%C4%83+%C8%99i+Informatic%C4%83!8m2!3d44.4355355!4d26.0995867!15sChdmYWN1bHRhdGUgZGUgbWF0ZW1hdGljYVoZIhdmYWN1bHRhdGUgZGUgbWF0ZW1hdGljYZIBEmZhY3VsdHlfb2Zfc2NpZW5jZZoBJENoZERTVWhOTUc5blMwVkpRMEZuU1VSemIySlhlRGRuUlJBQuABAA!4m8!1m0!1m5!1m1!1s0x40b1ff472f47f047:0x493984726f0235f9!2m2!1d26.0995867!2d44.4355355!3e3" target="_blank">Location</a>
         <a href="https://wa.me/+5511999999900">Whatsapp chat</a>
+        <%- locals.option %> 
     </address>
     <!-- 14) copyright + time/datetime-->
     <small>&#169;2022 Bucharest Romania, Inc.All rights reserved.
         <time datetime="2022-10-16 18:14">Date</time>
     </small>    
 </footer>
+
+<!-- laborator 5 decembrie min 54 -->
