--- a/views/fragments/head.ejs
+++ b/views/fragments/head.ejs
@@ -12,8 +12,11 @@
 <meta name="msapplication-config" content="Resources/Images/ico/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
-<link rel="stylesheet" href="Resources/CSS/galerie-statica-1000.css" type="text/css" media="only screen and (min-width:751px) and (max-width:999px)" />
+<link rel="stylesheet" href="Resources/CSS/banner.css" type="text/css" />
+<link rel="stylesheet" href="Resources/CSS/theme.css" type="text/css" />
+<link rel="stylesheet" href="Resources/CSS/libraries/custom.css" type="text/css" />
 <link rel="stylesheet" href="Resources/CSS/galerie-statica.css" type="text/css" />
+<link rel="stylesheet" href="Resources/CSS/galerie-statica-1000.css" type="text/css" media="only screen and (min-width:751px) and (max-width:999px)" />
 <link rel="stylesheet" href="Resources/CSS/galerie-statica-750.css" type="text/css" />
 <link rel="stylesheet" href="Resources/CSS/nav.css" type="text/css" />
 <link rel="stylesheet" href="Resources/CSS/nav-750.css" type="text/css" media="screen and (max-width:750px)" />
@@ -24,3 +27,4 @@ navigatie generata prin scss care funtioneaza la fel ca cea originala -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  <!-- Etapa 2 legatura cu layout.css -->
  <link rel="stylesheet" href="Resources/CSS/layout.css" type="text/css" />
+ <script src="Resources/js/cookies.js"></script>
