--- a/views/fragments/header.ejs
+++ b/views/fragments/header.ejs
@@ -3,7 +3,6 @@
         <!-- 5) navigatie -->
         <h1><b>W</b>heels <b>A</b>uto</h1>
         <nav>
-            <p id="absolut">My personal project!</p>
             <label id="house" for="med-menu" >
                 <i class="fa fa-home"></i>
             </label>
@@ -29,11 +28,15 @@
                 <li><a href="aboutUs">About us</a></li>
                 <li><div>Products</div>
                     <ul>
-                        <li><a href="wheels.html">Wheels</a></li>
+                        <li><a href="/produse">Wheels</a></li>
+                        <li><a href="/produse?material=alloywheels">Alloy Wheels</a></li>
+                        <li><a href="/produse?material=steelwheels">Steel Wheels</a></li>
                         <li><a href="accessories.html">Accessories</a></li>
                     </ul>
                 </li>
                 <li><a href="contactsupport.html">Contact&Support</a></li>
+                <li><a href="inregistrare">Sign Up</a></li>
+                <li><a href="reviste">Reviste</a></li>
             </ul>
         </nav>
     </div> 
