--- a/views/pages/aboutUs.ejs
+++ b/views/pages/aboutUs.ejs
@@ -6,6 +6,7 @@
         <title>Performance Wheels</title>
         <meta name="keywords" content="Wheels Auto, wheels, review wheels auto, wheels offer, wheels package, performance wheels">
         <meta name="description" content="Performance wheels are a great way to accelerate your car or truck. The right wheels can make a world of difference.">
+        <link rel="stylesheet" href="Resources/SCSS/video.css" type="text/css" />
         <style>
             * {
                 margin: 0;
@@ -28,7 +29,10 @@
         <%- include("../fragments/header.ejs") %>    
         <div class="cars"></div>
         <main>
-           Buna searaSSS
+            <div class="video_wheel">
+                <!-- pentru a-l derula incontinuu -->
+                <video src="../../Resources/Videos/wheel_video.mp4" autoplay loop playsinline muted></video> 
+            </div>
         </main>
         <!-- includem si footerul -->
         <%- include("../fragments/footer.ejs") %>   
